[gd_scene load_steps=9 format=2]

[ext_resource path="res://script/Title.gd" type="Script" id=1]
[ext_resource path="res://Assets/TitlePage/PicsArt_12-02-05.03.24.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/TitlePage/1575441016736.png" type="Texture" id=3]
[ext_resource path="res://Assets/TitlePage/PicsArt_12-04-12.12.44.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/TitlePage/PicsArt_12-04-12.10.43.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/TitlePage/New Project.jpg" type="Texture" id=6]
[ext_resource path="res://Assets/TitlePage/PicsArt_12-04-01.14.31.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/TitlePage/PicsArt_12-04-01.13.45.jpg" type="Texture" id=8]

[node name="MenuScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 453, 380 )
texture = ExtResource( 2 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 276, 134 )
scale = Vector2( 0.291667, 0.363775 )
texture = ExtResource( 3 )

[node name="InfoButton" type="TextureButton" parent="."]
margin_left = 216.625
margin_top = 480.0
margin_right = 316.625
margin_bottom = 520.0
__meta__ = {
"_edit_group_": true
}

[node name="Info" type="Sprite" parent="InfoButton"]
position = Vector2( 50, 21 )
scale = Vector2( 0.0572917, 0.0673516 )
texture = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 216.625
margin_top = 590.0
margin_right = 316.625
margin_bottom = 630.0
__meta__ = {
"_edit_group_": true
}

[node name="Play" type="Sprite" parent="PlayButton"]
position = Vector2( 50, 20 )
scale = Vector2( 0.055599, 0.0633086 )
texture = ExtResource( 5 )

[node name="InfoPopupMenu" type="PopupMenu" parent="."]
visible = true
margin_right = 20.0
margin_bottom = 20.0

[node name="Background" type="Sprite" parent="InfoPopupMenu"]
position = Vector2( 280, 350 )
scale = Vector2( 0.341463, 0.724299 )
texture = ExtResource( 6 )

[node name="Title" type="Sprite" parent="InfoPopupMenu"]
position = Vector2( 272.5, 135.188 )
scale = Vector2( 0.132813, 0.136416 )
texture = ExtResource( 7 )

[node name="CloseButton" type="TextureButton" parent="InfoPopupMenu"]
margin_left = 213.0
margin_top = 530.0
margin_right = 321.0
margin_bottom = 570.0
__meta__ = {
"_edit_group_": true
}

[node name="Exit" type="Sprite" parent="InfoPopupMenu/CloseButton"]
position = Vector2( 57, 20 )
scale = Vector2( 0.0564453, 0.0673517 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="InfoPopupMenu"]
margin_left = 131.44
margin_top = 265.0
margin_right = 397.44
margin_bottom = 418.0
text = "Press \"a\" to go left
Press \"d\" to go right"
align = 1
uppercase = true
[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="InfoPopupMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
